# asterinas

./: .bashrc  .gitignore  .gitmodules  .howdone.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Components.toml  DOCKER_IMAGE_VERSION  HugePageAnalysis.ipynb  Makefile  OSDK.toml  README.md  demo.sh  mariposa  requirements.txt  run_asterinas_policy_bench.sh  run_mpmc_bench.py  run_prefetch_microbench_cycle.sh  run_tao_bench.py  runner.py  rust-toolchain.toml  rustfmt.toml  scaling_analysis.ipynb  sort-cherry-pick-commits  tmp.rs
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/actions/benchmark/: action.yml
.github/actions/test/: action.yml
.github/workflows/: benchmark_x86.yml  benchmark_x86_tdx.yml  check_licenses.yml  close_stale_issues_and_prs.yml  publish_api_docs.yml  publish_aster_nixos.yml  publish_docker_images.yml  publish_osdk_and_ostd.yml  publish_sctrace.yml  publish_website.yml  push_cachix_dev.yml  review_pr_with_codex.yml  test_asterinas_vsock.yml  test_devcontainer.yml  test_iso_image.yml  test_loongarch.yml  test_nixos_full.yml  test_nixos_minimal.yml  test_riscv.yml  test_x86.yml  test_x86_tdx.yml  validate_scmls.yml
benchmarks/: README.md  flake.nix
benchmarks/1b3ff1a0c9f7dc9a9aac0f45bf1e5b10ab99d177/: MPMCBench.ipynb
benchmarks/1b52e1b4/: MPMCBench.ipynb
benchmarks/memcached/: flake.nix
book/src/: README.md  SUMMARY.md
book/src/distro/: README.md
book/src/kernel/: README.md  intel-tdx.md
book/src/mariposa/: README.md  oqueues.md  orpc.md
book/src/ostd/: data-capture.md  debugging.md
book/src/rfcs/: README.md
book/src/to-contribute/: version-bump.md
docs/src/kernel/: README.md  advanced-instructions.md  intel_tdx.md
docs/src/ostd/: README.md
docs/src/to-contribute/: dev-environment-setup.md
dyn_overhead/: Cargo.toml
dyn_overhead/src/: main.rs
editor-config/vscode/: settings.json  tasks.json
kernel/: Cargo.toml
kernel/comps/block/: Cargo.toml
kernel/comps/console/: Cargo.toml
kernel/comps/framebuffer/: Cargo.toml
kernel/comps/input/: Cargo.toml
kernel/comps/keyboard/: Cargo.toml
kernel/comps/mariposa_data_capture/: Cargo.toml
kernel/comps/mariposa_data_capture/python/: decode_mariposa_data.py  mariposa_data_reader.py  test_mariposa_data_reader.py
kernel/comps/mariposa_data_capture/src/: data_buffering.rs  data_capture_device.rs  data_capture_file.rs  lib.rs
kernel/comps/mariposa_data_capture/src/legacy/: data_capture_device.rs  data_capture_file.rs  mod.rs
kernel/comps/mariposa_oqueue_procfs/: Cargo.toml
kernel/comps/mariposa_oqueue_procfs/src/: config.rs  error.rs  lib.rs  registry.rs  ring_buffer.rs  stream.rs
kernel/comps/raid/: Cargo.toml  generate_weights.py
kernel/comps/raid/python/: export_dt.py  generate_decision_tree.py  generate_heimdall_weights.py  generate_linnos_plus_weights.py  generate_linnos_weights.py  weight_export.py
kernel/comps/raid/src/: decision_tree_predictions.rs  generate_heimdall_weights.py  generate_linnos_plus_weights.py  generate_weights.py  heimdall.rs  heimdall_weights.rs  heimdall_weights.rs.j2  lib.rs  linnos_plus_weights.rs  linnos_weights.rs  linnos_weights.rs.j2  selection_policies.rs  server_traits.rs
kernel/comps/raid/templates/: heimdall_weights.rs.j2  linnos_plus_weights.rs.j2
kernel/libs/cpio-decoder/: Cargo.toml
kernel/libs/cpio-decoder/src/: error.rs  lib.rs
kernel/src/: .benchmarks.rs.swo  benchmark_consts.rs  benchmarks.rs  context.rs  data_capture.rs  error.rs  event.rs  hugepage_model.rs  init.rs  interface.rs  kcmdline.rs  lib.rs  orpc_utils.rs  prelude.rs  vdso.rs
mariposa-cli/: README.md  pyproject.toml
mariposa-cli/mariposa_cli/: __init__.py  cli.py
mariposa-cli/mariposa_cli/oqueues/: __init__.py  backend.py  cbor_stream.py  cli.py  config.py  frames.py  oqfs.py  server.py  streams.py  transport.py
mariposa-cli/tests/: test_async.py  test_cli.py  test_integration.py  test_units.py
microbenchmark-kernel/: Cargo.toml  README.md
microbenchmark-kernel/src/: lib.rs
oqueues-mcp/: README.md  pyproject.toml
oqueues-mcp/oqueues_mcp/: __init__.py  config.py  frames.py  oqfs.py  server.py  streams.py  transport.py
oqueues-mcp/tests/: conftest.py  test_async.py  test_integration.py  test_units.py
orpc-prototype/: Cargo.toml
orpc-prototype/orpc/: Cargo.toml
orpc-prototype/orpc-macros/: Cargo.toml
orpc-prototype/orpc-sync/: Cargo.toml
osdk/: Cargo.toml  README.md
osdk/src/: arch.rs  cli.rs  util.rs
osdk/tests/: integration.rs
ostd/: Cargo.toml
ostd/libs/linux-bzimage/boot-params/: Cargo.toml
ostd/libs/orpc/: Cargo.toml
ostd/libs/orpc/src/: lib.rs
ostd/libs/orpc/src/oqueue/: locking.rs  mod.rs  registry.rs
ostd/libs/orpc/src/orpc_impl/: errors.rs  framework.rs  mod.rs
ostd/libs/orpc/src/sync/: blocker.rs  mod.rs  mutex.rs  task.rs
ostd/src/: assertion.rs  benchmark.rs  error.rs  interface.rs  kcmdline.rs  lib.rs  logger.rs  orpc_stub.rs  panic.rs  prelude.rs  smp.rs  stack_info.rs  stacktrace.rs
rigtorp_bench/: .gitignore  enqueue_latency.cpp
test/: Makefile
test/apps/: Makefile  test_common.mk
test/benchmark/: bench_linux_and_aster.sh
test/etc/: group  passwd  redis.conf
test/initramfs/: Makefile  README.md
test/nixos/: Cargo.toml
test/service/: start.sh  start_dropbear.sh
test/syscall_test/: run_syscall_test.sh
test/tools/: copy_dropbear.sh  copy_sshd.sh
throughput_results/: Untitled.ipynb  gen_graph.py
tools/: bump_version.sh  clippy_check.sh  merge.sh  parse_datacapture.py  qemu_args.sh  reset_datacapture.sh  watchexec_script.sh
tools/dev-local/: .gitignore  README.md  build-initramfs.sh  run-local.sh  setup-arm64.sh
tools/docker/: Dockerfile  README.md  run_dev_container.sh
tools/github_workflows/: build_and_upload_api_docs.sh  prepare_for_docker_build_and_push.sh  publish_api_docs.sh  publish_osdk_and_ostd.sh
tools/howdone/: README.md  howdone  howdone_example.yaml  tests.py
tools/oqueue/: read_oqueue.py
tools/oqueue_dumper/: dumper.py
tools/pytorch_to_burnpack/: Cargo.toml
tools/sctrace/: Cargo.toml  README.md
(+692 files in other folders)
