[workspace]
resolver = "2"
members = [
    "osdk/deps/frame-allocator",
    "osdk/deps/heap-allocator",
    "osdk/deps/test-kernel",
    "ostd",
    "ostd/libs/align_ext",
    "ostd/libs/ostd-macros",
    "ostd/libs/id-alloc",
    "ostd/libs/linux-bzimage/builder",
    "ostd/libs/linux-bzimage/boot-params",
    "ostd/libs/linux-bzimage/setup",
    "ostd/libs/ostd-test",
    "kernel",
    "kernel/comps/block",
    "kernel/comps/console",
    "kernel/comps/framebuffer",
    "kernel/comps/input",
    "kernel/comps/keyboard",
    "kernel/comps/network",
    "kernel/comps/raid",
    "kernel/comps/softirq",
    "kernel/comps/systree",
    "kernel/comps/logger",
    "kernel/comps/mlsdisk",
    "kernel/comps/time",
    "kernel/comps/virtio",
    "kernel/libs/cpio-decoder",
    "kernel/libs/int-to-c-enum",
    "kernel/libs/int-to-c-enum/derive",
    "kernel/libs/aster-rights",
    "kernel/libs/aster-rights-proc",
    "kernel/libs/aster-util",
    "kernel/libs/aster-bigtcp",
    "kernel/libs/jhash",
    "kernel/libs/keyable-arc",
    "kernel/libs/typeflags",
    "kernel/libs/typeflags-util",
    "kernel/libs/atomic-integer-wrapper",
    "kernel/libs/xarray",
    "ostd/tests/early-boot-test-kernel",
]
exclude = [
    "kernel/libs/comp-sys/cargo-component",
    "kernel/libs/comp-sys/component",
    "kernel/libs/comp-sys/component-macro",
    "kernel/libs/comp-sys/controlled",
    "osdk",
]

[workspace.lints.rust]
function_casts_as_integer = "allow"
missing_crate_level_docs = "warn"
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(baseline_asterinas)', 'cfg(ktest)'] }
unpredictable-function-pointer-comparisons = "allow"
unsafe_op_in_unsafe_fn = "deny"
unused_parens = "allow"

[workspace.lints.clippy]
allow_attributes = "warn"
collapsible_match = "allow"
collapsible-if = "allow"
derivable_impls = "allow"
explicit_counter_loop = "allow"
filter_next = "allow"
implicit_saturating_sub = "allow"
iter_kv_map = "allow"
let_and_return = "allow"
manual_is_multiple_of = "allow"
manual_saturating_arithmetic = "allow"
mem-replace-option-with-some = "allow"
question_mark = "allow"
unnecessary_cast = "allow"
unnecessary_option_map_or_else = "allow"
unnecessary_sort_by = "allow"
unnecessary_unwrap = "allow"
while_let_loop = "allow"

# TODO(arthurp,  #48): Enable once the code can pass it.
# undocumented_unsafe_blocks = "deny"
# TODO(arthurp,  #49): Enable once the code can pass it.
# missing_panics_doc = "deny"

# Cargo only looks at the profile settings
# in the Cargo.toml manifest at the root of the workspace

[workspace.dependencies]
snafu = { version = "0.8", default-features = false, features = ["alloc", "rust_1_81"] }

[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"

# Release profile configuration with Link Time Optimization (LTO) enabled.
#
# This profile is optimized for maximum runtime performance,
# (achieving a 2% reduction in latency for the getpid system call).
# However, enabling LTO significantly increases compilation times,
# approximately doubling them compared to when LTO is not enabled.
[profile.release-lto]
inherits = "release"
lto = true
# lto can only be enabled when panic strategy is abort
panic = "abort"
# set codegen-units as the smallest number
codegen-units = 1
