[project]
name = "mariposa-cli"
version = "0.1.0"
description = "Host-side CLI (and MCP servers) for the Mariposa interlayer"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "cbor2>=5.6.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
mariposa = "mariposa_cli.cli:main"
mariposa-oqueues-mcp = "mariposa_cli.oqueues.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mariposa_cli*"]
