[project]
name = "oqueues-mcp"
version = "0.1.0"
description = "MCP server for the Mariposa OQueue File System"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "cbor2>=5.6.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
oqueues-mcp = "oqueues_mcp:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oqueues_mcp*"]
