[package]
name = "aster-raid"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ostd = { path = "../../../ostd" }
aster-block = { path = "../block" }
aster-virtio = { path = "../virtio" }

[lints]
workspace = true
