[package]
name = "aster-raid"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ostd = { path = "../../../ostd" }
aster-block = { path = "../block" }
aster-virtio = { path = "../virtio" }
log = "0.4"

[lints]
workspace = true
