[package]
name = "cpio-decoder"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-to-c-enum = { path = "../../libs/int-to-c-enum" }
no_std_io2 = { version = "0.9.3", features = ["alloc"] }
lending-iterator = "0.1.7"

[lints]
workspace = true
