[package]
name = "linux-boot-params"
version = "0.15.2"
edition = "2024"
description = "The Boot Parameters for Linux Boot Protocol"
license = "MPL-2.0"
repository = "https://github.com/ldos-project/asterinas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lints]
workspace = true
